--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [project]
-name = "promptify"
+name = "promptdump"
 version = "0.1.0"
 description = "A command-line tool to quickly gather and format code for AI prompts"
 authors = [    {name = "Sander Land"} ]
@@ -10,7 +10,7 @@ dependencies = [
 ]
 
 [project.scripts]
-promptify = "promptify:main"
+promptdump = "promptdump:main"
 
 [tool.ruff]
 line-length = 120
